--- a/Baja.html
+++ b/Baja.html
@@ -1,28 +1,72 @@
 
 <!DOCTYPE html>
 <html>
-<head>
-	<meta Charset='UTF-8'/>
-	<link rel='stylesheet' href='/css/std.css'/>
-	<title>Baja California</title>
-	<ul>
-		<li><a href='index.html'>Home</a></li>
-		<li><a href= 'homePage.html'>Family Page</a></li>
-		<li><a href= 'friends.html'>Friends Page</a></li>
-	</ul><br/><br/>
-</head>
-<body>
-	<em><h1>The Adevntures in Baja, California which is actually in Mexico</h1></em>
-	<em><h2>The Jellyfish</h2></em>
-	<p>Jellyfish washed onto the shore!</p>
-	<img src='./Pictures/JellyFish.jpg' width='400'/>	
-	<br/>
-	<hr/>
-	<em><h2>The ATV</h2></em>
-	<p>We all did jumps off sand dunes when we rode atvs! Weston actually fliped an atv <br/>once and landed rightside up and unscathed. Talk about miracles!</p>
-	<img src='./Pictures/BajaATV.jpg' width='400'/>
-	<br/><br/><a href='index.html'>Home Page</a> 
-	<br/><a href='homePage.html'>Family Page</a>
-	<br/><a href='adventures.html'>Go back to see other adventures</a>
-</body>
+	<head>
+		<meta Charset='UTF-8'/>
+		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+		<link rel='stylesheet' href='/css/front.css'/>
+		<title>Baja California</title>
+		<!-- Nav Bar -->
+		<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+			<a class="navbar-brand" href="index.html">Hutchingsjam</a>
+			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+			<span class="navbar-toggler-icon"></span>
+			</button>
+			<div class="collapse navbar-collapse" id="navbarNavDropdown">
+			<ul class="navbar-nav">
+				<li class="nav-item active">
+				<a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+				</li>
+				<li class="nav-item dropdown">
+					<a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+					Family
+					</a>
+					<div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+					<a class="dropdown-item" href="homePage.html">Fam Home Page</a>
+					<a class="dropdown-item" href="Snuggle.html">Cuddle Puddles</a>
+					<a class="dropdown-item" href="Goofy.html">Sillies</a>
+					<a class="dropdown-item" href="Baja.html">Baja</a>
+					</div>
+				</li>
+				<li class="nav-item">
+				<a class="nav-link" href="friends.html">Friends</a>
+				</li>				
+			</ul>
+			</div>
+		</nav>
+	</head>
+	<body>
+		<em><h1>The Adevntures in Baja, California which is actually in Mexico</h1></em>
+		<em><h2>The Jellyfish</h2></em>
+		<p>Jellyfish washed onto the shore!</p>
+		<img src='./Pictures/JellyFish.jpg' width='400'/>	
+		<br/>
+		<hr/>
+		<em><h2>The ATV</h2></em>
+		<p>We all did jumps off sand dunes when we rode atvs! Weston actually fliped an atv <br/>once and landed rightside up and unscathed. Talk about miracles!</p>
+		<img src='./Pictures/BajaATV.jpg' width='400'/>
+
+		<!-- Footer -->
+		<footer>
+			<div class='container'>
+			<div class="row align-items-center">
+				<div class="col-4">
+					<ul class="ul">
+						<li class="li"> Email: not.Real@gmail.com</li>
+					</ul>
+				</div>
+				<div class="col-8">
+					<ul class="ul">
+						<li class="li"> Github: git@github.com:hutchingsForNow/Hutchingsjam.git</li>
+					</ul>
+				</div>
+			</div>
+		</footer>
+
+		<!-- bootstrap links-->
+		<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+		
+	</body>
 </html>
