--- a/Goofy.html
+++ b/Goofy.html
@@ -1,67 +1,107 @@
 <!DOCTYPE html>
 <html>
 	<head>
-	<meta Charset='UTF-8'/>
-	<link rel='stylesheet' href='/css/std.css'/>
-	<link rel'stylesheet' href='./css/flexboxStd.css'/>
-	<ul>
-		<li><a href='index.html'>Home</a></li>
-		<li><a href= 'homePage.html'>Family Page</a></li>
-		<li><a href= 'friends.html'>Friends Page</a></li>
-	</ul><br/><br/>
-	<title>Goofyness</title>
-	<h1>The Goofiest of Us</h1>
+		<meta Charset='UTF-8'/>
+		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+		<link rel='stylesheet' href='/css/front.css'/>
+		<link rel='stylesheet' href='./css/flexboxStd.css'/>
+
+		<!-- Nav Bar -->
+		<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+			<a class="navbar-brand" href="index.html">Hutchingsjam</a>
+			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+			<span class="navbar-toggler-icon"></span>
+			</button>
+			<div class="collapse navbar-collapse" id="navbarNavDropdown">
+			<ul class="navbar-nav">
+				<li class="nav-item active">
+				<a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+				</li>
+				<li class="nav-item dropdown">
+					<a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+					Family
+					</a>
+					<div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+					<a class="dropdown-item" href="homePage.html">Fam Home Page</a>
+					<a class="dropdown-item" href="Snuggle.html">Cuddle Puddles</a>
+					<a class="dropdown-item" href="Goofy.html">Sillies</a>
+					<a class="dropdown-item" href="Baja.html">Baja</a>
+					</div>
+				</li>
+				<li class="nav-item">
+				<a class="nav-link" href="friends.html">Friends</a>
+				</li>				
+			</ul>
+			</div>
+		</nav>
+		<title>Goofyness</title>
+		<h1>The Goofiest of Us</h1>
 	</head>
 	<body>
 		<div class='photo-grid-container'>
-  			<div class='photo-grid'>
-    				<div class='photo-grid-item first-item'>
-					<img src='./Pictures/FamSillies0.jpg' width='300'/> <p>There can never be enough BBQ sauce.</p>
-	</body><br/><body>
+			<div class='photo-grid'>
+				<div class='photo-grid-item first-item'>
+				<img src='./Pictures/FamSillies0.jpg' width='300'/> <p>There can never be enough BBQ sauce.</p>
+				<br/>
+				</div>
+				<div class='photo-grid-item'>
+				<br/>
+				<img src='./Pictures/FamSillies1.jpg' width='300'/><p>AaAaAaHHH!!!!!!!! </p>
+				</div>
+				<div class='photo-grid-item'>
+					<img src='./Pictures/FamSillies2.jpg' width='300'/> <p>Gollum??? </p>
+				</div>
+				<div class='photo-grid-item'>
+					<img src='./Pictures/FamSillies3.jpg' width='300'/> <p>Pajama Party!</p>
+				</div>
+				<div class='photo-grid-item'>
+					<img src='./Pictures/FamSillies4.jpg' width='300'/> <p>Monkey faces!</p>
+				</div>
+				<div class='photo-grid-item'>
+					<img src='./Pictures/FamSillies5.jpg' width='300'/> <p>Book reading is best when done upside-down.</p>
+				</div>
+				<div class='photo-grid-item'>
+					<img src='./Pictures/FamSillies6.jpg' width='300'/> <p>I wonder if they like their presents.</p>
+				</div>
+				<div class='photo-grid-item'>
+					<img src='./Pictures/FamSillies7.jpg' width='300'/> <p>What is on our faces?</p>
+				</div>
+				<div class='photo-grid-item'>
+					<img src='./Pictures/FamSillies8.jpg' width='300'/> <p>Hula dancing</p>
+				</div>
+				<div class='photo-grid-item'>
+					<img src='./Pictures/FamSillies9.jpg' width='300'/> <p>He stole my hair!</p>
+				</div>
+				<div class='photo-grid-item'>
+					<img src='./Pictures/FamSillies10.jpg' width='300'/> <p>How many grapes can you fit in your mouth?</p>
+				</div>
+			</div>
 		</div>
-    <div class='photo-grid-item'>
-	    <br/><img src='./Pictures/FamSillies1.jpg' width='300'/><p>AaAaAaHHH!!!!!!!! </p>
-	</body><br/><body>
-	</div>
-    <div class='photo-grid-item'>
-	    <br/><img src='./Pictures/FamSillies2.jpg' width='300'/> <p>Gollum??? </p>
-	</body><br/><body>
-	</div>
-    <div class='photo-grid-item'>
-	    <br/><img src='./Pictures/FamSillies3.jpg' width='300'/> <p>Pajama Party!</p>
-	</body><br/><body>
-</div>
-    <div class='photo-grid-item'>
-	    <br/><img src='./Pictures/FamSillies4.jpg' width='300'/> <p>Monkey faces!</p>
-	</body><br/><body>
-		</div>
-    <div class='photo-grid-item'>
-	    <br/><img src='./Pictures/FamSillies5.jpg' width='300'/> <p>Book reading is best when done upside-down.</p>
-	</body><br/><body>
-</div>
-    <div class='photo-grid-item'>
-	    <br/><img src='./Pictures/FamSillies6.jpg' width='300'/> <p>I wonder if they like their presents.</p>
-	</body><br/><body>
-</div>
-    <div class='photo-grid-item'>
-	    <br/><img src='./Pictures/FamSillies7.jpg' width='300'/> <p>What is on our faces?</p>
-	</body><br/><body>
-</div>
-    <div class='photo-grid-item'>
-	    <br/><img src='./Pictures/FamSillies8.jpg' width='300'/> <p>Hula dancing</p>
-	</body><br/><body>
-</div>
-    <div class='photo-grid-item'>
-	   <br/><img src='./Pictures/FamSillies9.jpg' width='300'/> <p>He stole my hair!</p>
-</div>
-    <div class='photo-grid-item'>
-	</body><br/><body>
-		<br/><img src='./Pictures/FamSillies10.jpg' width='300'/> <p>How many grapes can you fit in your mouth?</p>
-	</body><br/><body>
-		</div>
-  </div>
-</div>
-	</body>
 
+		
+		<!-- Footer -->
+		<footer>
+			<div class='container'>
+			<div class="row align-items-center">
+				<div class="col-4">
+					<ul class="ul">
+						<li class="li"> Email: not.Real@gmail.com</li>
+					</ul>
+				</div>
+				<div class="col-8">
+					<ul class="ul">
+						<li class="li"> Github: git@github.com:hutchingsForNow/Hutchingsjam.git</li>
+					</ul>
+				</div>
+			</div>
+		</footer>
+		
+
+		<!-- bootstrap links-->
+		<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+
+	</body>
 </html>
 
