--- a/Zoo.html
+++ b/Zoo.html
@@ -2,12 +2,66 @@
 <!DOCTYPE html>
 <html>
 	<head>
-	<meta Charset='UTF-8'/>
-	<link rel='stylesheet' href='/css/standard.css'/>
+		<meta Charset='UTF-8'/>
+		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+		<link rel='stylesheet' href='/css/front.css'/>
 		<title>Zoo</title>
+			<!-- Nav Bar -->
+		<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+			<a class="navbar-brand" href="index.html">Hutchingsjam</a>
+			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+			<span class="navbar-toggler-icon"></span>
+			</button>
+			<div class="collapse navbar-collapse" id="navbarNavDropdown">
+				<ul class="navbar-nav">
+					<li class="nav-item active">
+					<a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+					</li>
+					<li class="nav-item dropdown">
+						<a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+						Family
+						</a>
+						<div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+						<a class="dropdown-item" href="homePage.html">Fam Home Page</a>
+						<a class="dropdown-item" href="Snuggle.html">Cuddle Puddles</a>
+						<a class="dropdown-item" href="Goofy.html">Sillies</a>
+						<a class="dropdown-item" href="Baja.html">Baja</a>
+						</div>
+					</li>
+					<li class="nav-item">
+					<a class="nav-link" href="friends.html">Friends</a>
+					</li>
+					
+				</ul>
+			</div>
+		</nav>
 		<h1>Zoo</h1>
 	</head>
 	<body>
 		<p>Pics to come.</p>
+				
+			
+		<!-- Footer -->
+		<footer>
+			<div class='container'>
+			<div class="row align-items-center">
+				<div class="col-4">
+					<ul class="ul">
+						<li class="li"> Email: not.Real@gmail.com</li>
+					</ul>
+				</div>
+				<div class="col-8">
+					<ul class="ul">
+						<li class="li"> Github: git@github.com:hutchingsForNow/Hutchingsjam.git</li>
+					</ul>
+				</div>
+			</div>
+		</footer>
+		
+		<!-- bootstrap links-->
+		<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+
 	</body>
 </html>
