Made tons of changes. Only links that are finished are available.

--- a/homePage.html
+++ b/homePage.html
@@ -9,7 +9,7 @@
 	<title>My Family</title>
 	<!-- Nav Bar -->
 	<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-		<a class="navbar-brand" href="index.html">Hutchingsjam</a>
+		<em><a class="navbar-brand" href="index.html">Hutchingsjam</a></em>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
 		  <span class="navbar-toggler-icon"></span>
 		</button>
@@ -40,36 +40,78 @@
 	<body>
 		<!-- content here -->
 		<h1>My Family</h1>
-<h2>Home Projects</h2>
-<p> Every summer, my family and I have some kind of renovation project we do. My dad is an engineer; <br/>
-so over the years, all of us kids learned a thing or two about building structures or fixing a sink.
-<ul>
-	<li> The Downstairs Flooring</li>
-	<li> Backyard Shed</li>
-	<li> Arcade</li>
-</ul>
-	<h2>Adventures</h2>
-	<p>	Every summer, as well as doing some kindo of project, my family loves traveling. We have so much fun<br/>
-	no matter where we go or what we do. Here are some places we have been to! I have some goofy siblings, just<br/>
-	follow these links to see what they did!<br/>
-	</p>
-	<ul>
-		<li><a href='Baja.html'>Baja, California, Mexico</a></li>
-		<li><a href='DC.html'>Washington D.C.</a></li>
-		<li><a href='Utah.html'>Utah</a></li>
-	</ul>
-	<br/>
-	<h2>Goofy Photos!</h2>
-	<p> These are some <a href='Goofy.html'>photos</a> of us kids growing up that I just had to share. Each will have minimal context.<br/> Just try to gues what is going on.</p>
-	<h2>The Best Year EVER! 2018</h2>
-	<p> This year was the year two of my siblings got <a href='2018.html'>married!</a> </p>
-	<h2>Snuggle Puddles!</h2>
-	<p> I don't think I even need to explain what you will find behind this <a href='Snuggle.html'>link</a></p>
-	<h2>Shooting</h2>
-	<p> My family is a really good shot. Here are some <a href='Shooting.html'>pics as proof!</a></p>
-	<h2>The Zoo</h2>
-	<p> If you think that these animals are wild, just see my family at this <a href='Zoo.html'>zoo!</a></p>
-
+		<br/>
+		<h2>Home Projects</h2>
+		<div class="container">			
+			<div class="row align-items-center">
+				<div class="col">							
+					<p> Every summer, my family and I have some kind of renovation project we do. My dad is an engineer;
+					so over the years, all of us kids learned a thing or two about building structures or fixing a sink.
+				</div>
+			</div>
+			<ul>
+			<li class="liCenter"> The Downstairs Flooring</li>
+			<li class="liCenter"> Backyard Shed</li>
+			<li class="liCenter"> Arcade</li>
+			</ul>
+			<h2>Adventures</h2>
+			<div class="row align-items-center">				
+				<div class="col">
+					<p>	Every summer, as well as doing some kindo of project, my family loves traveling. We have so much fun
+					no matter where we go or what we do. Here are some places we have been to! I have some goofy siblings, just
+					follow these links to see what they did!
+					</p>
+				</div>
+			</div>
+		</div>
+		<ul>
+			<li class="liCenter"><!--	<a href='Baja.html'>Baja, California, Mexico</a>-->Baja, California, Mexico</li>
+			<li class="liCenter"><!--	<a href='DC.html'>Washington D.C.</a>-->Virginia</li>
+			<li class="liCenter"><!--	<a href='Utah.html'>Utah</a>-->Utah</li>
+		</ul>
+		<br/>
+		<div class="container">
+		<!--		<a href='Goofy.html'> -->
+				<h2>Goofy Photos!</h2>
+				<div class="row align-items-center">				
+					<div class="col">
+						<p style="text-align: center;"> These are some photos of us kids growing up that I just had to share. Each will have minimal context. Just try to gues what is going on.</p>
+					</div>
+				</div>
+		<!--		</a> -->
+		<!--		<a href='2018.html'> --->
+				<h2>The Best Year EVER! 2018</h2>
+				<div class="row align-items-center">				
+					<div class="col">
+						<p style="text-align: center;"> This year was the year two of my siblings got married!</p>
+					</div>
+				</div>
+			<!--	</a> -->
+			<!--	<a href='Snuggle.html'>-->
+			<h2>Snuggle Puddles!</h2>
+				<div class="row align-items-center">				
+					<div class="col">
+						<p style="text-align: center;"> I don't think I even need to explain what you will find on this page.</p>
+					</div>
+				</div>
+			<!--	</a> -->
+			<!--	<a href='Shooting.html'> -->
+				<h2>Shooting</h2>
+				<div class="row align-items-center">				
+					<div class="col">
+						<p style="text-align: center;"> My family is a really good shot. Here are some pics as proof!</p>
+					</div>
+				</div>
+			<!--	</a> -->
+		<!--	<a href='Zoo.html'> -->
+				<h2>The Zoo</h2>
+				<div class="row align-items-center">				
+					<div class="col">
+						<p style="text-align: center;"> If you think that these animals are wild, just see my family at this zoo!</p>
+					</div>
+				</div>
+			<!--	</a> -->
+		</div>
 
 	<!-- Footer -->
 	<footer>
