--- a/Baja.html
+++ b/Baja.html
@@ -8,7 +8,7 @@
 		<title>Baja California</title>
 		<!-- Nav Bar -->
 		<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-			<a class="navbar-brand" href="index.html">Hutchingsjam</a>
+			<em><a class="navbar-brand" href="index.html">Hutchingsjam</a></em>
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
 			<span class="navbar-toggler-icon"></span>
 			</button>
@@ -37,14 +37,36 @@
 	</head>
 	<body>
 		<em><h1>The Adevntures in Baja, California which is actually in Mexico</h1></em>
+		<br/><br/>
 		<em><h2>The Jellyfish</h2></em>
-		<p>Jellyfish washed onto the shore!</p>
-		<img src='./Pictures/JellyFish.jpg' width='400'/>	
+		<div class="container">
+			<div class="row align-items-center">
+				<div class="col">
+					<img src='./Pictures/JellyFish.jpg' width='400'/>
+				</div>	
+				<div class="col">
+					<p>Jellyfish washed onto the shore! There were tons of them on the rocks. 
+						We managed to put one in a bucket and show it to our mom.</p>
+				</div>
+				<div class="col-2"><p> </p></div>
+			</div>
+		</div>
 		<br/>
 		<hr/>
+		<br/>
 		<em><h2>The ATV</h2></em>
-		<p>We all did jumps off sand dunes when we rode atvs! Weston actually fliped an atv <br/>once and landed rightside up and unscathed. Talk about miracles!</p>
-		<img src='./Pictures/BajaATV.jpg' width='400'/>
+		<div class="conatiner">
+			<div class="row align-items-center">
+				<div class="col-2"><p> </p></div>
+				<div class="col-sm">
+					<p>We all did jumps off sand dunes when we rode atvs! Weston actually fliped an atv
+						once and landed rightside up and unscathed. Talk about miracles!</p>
+				</div>
+				<div class="col">
+					<img src='./Pictures/BajaATV.jpg' width='400'/>
+				</div>
+			</div>
+		</div>
 
 		<!-- Footer -->
 		<footer>
