--- a/DC.html
+++ b/DC.html
@@ -3,11 +3,11 @@
 	<head>
 	<meta Charset='UTF-8'/>
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-	<link rel='stylesheet' href='/css/standard.css'/>
+	<link rel='stylesheet' href='/css/front.css'/>
 	<title>Washington D.C.</title>
 	<!-- Nav Bar -->
 	<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-		<a class="navbar-brand" href="index.html">Hutchingsjam</a>
+		<em><a class="navbar-brand" href="index.html">Hutchingsjam</a></em>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
 		  <span class="navbar-toggler-icon"></span>
 		</button>
