--- a/Goofy.html
+++ b/Goofy.html
@@ -4,11 +4,12 @@
 		<meta Charset='UTF-8'/>
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 		<link rel='stylesheet' href='/css/front.css'/>
-		<link rel='stylesheet' href='./css/flexboxStd.css'/>
+		<link rel='stylesheet' href='/css/std.css'/>
+		<!--<link rel='stylesheet' href='./css/flexboxStd.css'/> .container messed with footer-->
 
 		<!-- Nav Bar -->
 		<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-			<a class="navbar-brand" href="index.html">Hutchingsjam</a>
+			<em><a class="navbar-brand" href="index.html">Hutchingsjam</a></em>
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
 			<span class="navbar-toggler-icon"></span>
 			</button>
@@ -38,47 +39,122 @@
 		<h1>The Goofiest of Us</h1>
 	</head>
 	<body>
-		<div class='photo-grid-container'>
-			<div class='photo-grid'>
-				<div class='photo-grid-item first-item'>
-				<img src='./Pictures/FamSillies0.jpg' width='300'/> <p>There can never be enough BBQ sauce.</p>
-				<br/>
+		<!-- polroids -->
+
+		<div class="container">
+			<div class="row align-items-center">
+				<div class="col">
+					<div class="polaroid">
+						<div class="contain">
+							<img src='./Pictures/FamSillies0.jpg' width='300'/> <p>There can never be enough BBQ sauce.</p>
+						</div>
+					</div>
 				</div>
-				<div class='photo-grid-item'>
-				<br/>
-				<img src='./Pictures/FamSillies1.jpg' width='300'/><p>AaAaAaHHH!!!!!!!! </p>
+				<div class="col">
+					<div class="polaroid">
+						<div class="contain">
+							<img src='./Pictures/FamSillies1.jpg' width='300'/><p>AaAaAaHHH!!!!!!!! </p>
+						</div>
+					</div>
 				</div>
-				<div class='photo-grid-item'>
-					<img src='./Pictures/FamSillies2.jpg' width='300'/> <p>Gollum??? </p>
+			</div>	
+		</div>
+
+		<div class="container">
+			<div class="row align-items-center">
+				<div class="col">
+					<div class="polaroid">
+						<div class="contain">
+							<img src='./Pictures/FamSillies2.jpg' width='300'/> <p>Gollum???</p>
+						</div>
+					</div>
 				</div>
-				<div class='photo-grid-item'>
-					<img src='./Pictures/FamSillies3.jpg' width='300'/> <p>Pajama Party!</p>
+				<div class="col">
+					<div class="polaroid">
+						<div class="contain">
+							<img src='./Pictures/FamSillies3.jpg' width='300'/> <p>Pajama Party!</p>
+						</div>
+					</div>
 				</div>
-				<div class='photo-grid-item'>
-					<img src='./Pictures/FamSillies4.jpg' width='300'/> <p>Monkey faces!</p>
+			</div>	
+		</div>
+
+		<div class="container">
+			<div class="row align-items-center">
+				<div class="col">
+					<div class="polaroid">
+						<div class="contain">
+							<img src='./Pictures/FamSillies4.jpg' width='300'/> <p>Monkey faces!</p>
+						</div>
+					</div>
 				</div>
-				<div class='photo-grid-item'>
-					<img src='./Pictures/FamSillies5.jpg' width='300'/> <p>Book reading is best when done upside-down.</p>
+				<div class="col">
+					<div class="polaroid">
+						<div class="contain">
+							<img src='./Pictures/FamSillies5.jpg' width='300'/> <p>Book reading is best when done upside-down.</p>
+						</div>
+					</div>
 				</div>
-				<div class='photo-grid-item'>
-					<img src='./Pictures/FamSillies6.jpg' width='300'/> <p>I wonder if they like their presents.</p>
+			</div>	
+		</div>
+
+		<div class="container">
+			<div class="row align-items-center">
+				<div class="col">
+					<div class="polaroid">
+						<div class="contain">
+							<img src='./Pictures/FamSillies6.jpg' width='300'/> <p>I wonder if they like their presents.</p>
+						</div>
+					</div>
 				</div>
-				<div class='photo-grid-item'>
-					<img src='./Pictures/FamSillies7.jpg' width='300'/> <p>What is on our faces?</p>
+				<div class="col">
+					<div class="polaroid">
+						<div class="contain">
+							<img src='./Pictures/FamSillies7.jpg' width='300'/> <p>What is on our faces?</p>
+						</div>
+					</div>
 				</div>
-				<div class='photo-grid-item'>
-					<img src='./Pictures/FamSillies8.jpg' width='300'/> <p>Hula dancing</p>
+			</div>	
+		</div>
+
+		<div class="container">
+			<div class="row align-items-center">
+				<div class="col">
+					<div class="polaroid">
+						<div class="contain">
+							<img src='./Pictures/FamSillies8.jpg' width='300'/> <p>Hula dancing</p>
+						</div>
+					</div>
 				</div>
-				<div class='photo-grid-item'>
-					<img src='./Pictures/FamSillies9.jpg' width='300'/> <p>He stole my hair!</p>
+				<div class="col">
+					<div class="polaroid">
+						<div class="contain">
+							<img src='./Pictures/FamSillies9.jpg' width='300'/> <p>He stole my hair!</p>
+						</div>
+					</div>
 				</div>
-				<div class='photo-grid-item'>
-					<img src='./Pictures/FamSillies10.jpg' width='300'/> <p>How many grapes can you fit in your mouth?</p>
+			</div>	
+		</div>
+
+		<div class="container">
+			<div class="row align-items-center">
+				<div class="col">
+					<div class="polaroid">
+						<div class="contain">
+							<img src='./Pictures/FamSillies10.jpg' width='300'/> <p>How many grapes can you fit in your mouth?</p>
+						</div>
+					</div>
+				</div>
+				<div class="col">
+					<div class="polaroid">
+						<div class="contain">
+							<img src='./Pictures/Weston.jpg' width='300'/> <p>Too bright?</p>
+						</div>
+					</div>
 				</div>
 			</div>
 		</div>
 
-		
 		<!-- Footer -->
 		<footer>
 			<div class='container'>
