--- a/Snuggle.html
+++ b/Snuggle.html
@@ -3,12 +3,12 @@
 	<head>
 		<meta Charset='UTF-8'/>
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-		<link rel='stylesheet' href='/css/front.css'/>
-		<link rel='stylesheet' href='./css/flexboxStd.css'/>
+		<link rel='stylesheet' href='/css/std.css'/>
+		<!--<link rel='stylesheet' href='./css/flexboxStd.css'/>-->
 		<title>Snuggle Puddles!</title>
 			<!-- Nav Bar -->
 		<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-			<a class="navbar-brand" href="index.html">Hutchingsjam</a>
+			<em><a class="navbar-brand" href="index.html">Hutchingsjam</a></em>
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
 			<span class="navbar-toggler-icon"></span>
 			</button>
@@ -38,81 +38,49 @@
 		<h1>Snuggle Puddles!</h1>
 	</head>
 	<body>
-      	  <br/><br/>
-	  <div class='photo-grid-container'>
-  		   <div class='photo-grid'>
- 			<div class='photo-grid-item'><img src='./Pictures/FamSnuggles0.jpg' width='400'/></div>
- 		   	<div class='photo-grid-item'><img src='./Pictures/FamSnuggles1.jpg' width='400'/></div>
-   			 <div class='photo-grid-item'><img src='./Pictures/FamSnuggles2.jpg' width='400'/></div>
-		    </div>
-	  </div>
-	  <div class='photo-grid-container'>
-		 <div class='photo-grid'>
-      		 	<div class='photo-grid-item'><img src='./Pictures/FamSnuggles3.JPG' width='400'/></div>
-   			 <div class='photo-grid-item'><img src='./Pictures/FamSnuggles4.jpg' width='400'/></div>
-    			<div class='photo-grid-item'><img src='./Pictures/FamSnuggles5.jpg' width='400'/></div>
-		  </div>
-
-	  </div><br/>
-	  <div class='photo-grid-container'>
-		<div class='photo-grid'>
-    		 	<div class='photo-grid-item'><img src='./Pictures/FamSnuggles6.jpg' width='400'></div>
-    			<div class='photo-grid-item'><img src='./Pictures/FamSnuggles7.jpg' width='400'/></div>
-   			 <div class='photo-grid-item'><img src='./Pictures/FamSnuggles8.jpg' width='400'/></div>
+      	<br/>
+		<div class='container'>
+			<div class='row align-items-center'>
+				<div class='col'><img class="img" src='./Pictures/FamSnuggles0.jpg' width='400'/></div>
+				<div class='col'><img class="img" src='./Pictures/FamSnuggles1.jpg' width='400'/></div>
+			</div>
 		</div>
-
-	  </div><br/>
-	  <div class='photo-grid-container'>
-		 <div class='photo-grid'>
-   			 <div class='photo-grid-item'><img src='./Pictures/FamSnuggles9.jpg' width='400'/></div>
- 		 </div>
-	  </div>
-
-<!--
-
-	<body>
-      	  <br/><br/>
-	  <div class='photo-grid-container'>
-  		   <div class='photo-grid'>
- 			<div class='photo-grid-item'><img src='./Pictures/FamSnuggles0.jpg' width='400'/></div>
- 		   	<div class='photo-grid-item'><img src='./Pictures/FamSnuggles1.jpg' width='400'/></div>
-   			 <div class='photo-grid-item'><img src='./Pictures/FamSnuggles2.jpg' width='400'/></div>
-		    </div>
-	  </div>
-	  <div class='photo-grid-container'>
-		 <div class='photo-grid'>
-      		 	<div class='photo-grid-item'><img src='./Pictures/FamSnuggles3.JPG' width='400'/></div>
-   			 <div class='photo-grid-item'><img src='./Pictures/FamSnuggles4.jpg' width='400'/></div>
-    			<div class='photo-grid-item'><img src='./Pictures/FamSnuggles5.jpg' width='400'/></div>
-		  </div>
-
-	  </div><br/>
-	  <div class='photo-grid-container'>
-		<div class='photo-grid'>
-    		 	<div class='photo-grid-item'><img src='./Pictures/FamSnuggles6.jpg' width='400'></div>
-    			<div class='photo-grid-item'><img src='./Pictures/FamSnuggles7.jpg' width='400'/></div>
-   			 <div class='photo-grid-item'><img src='./Pictures/FamSnuggles8.jpg' width='400'/></div>
-		</div>
-
-	  </div><br/>
-	  <div class='photo-grid-container'>
-		 <div class='photo-grid'>
-   			 <div class='photo-grid-item'><img src='./Pictures/FamSnuggles9.jpg' width='400'/></div>
- 		 </div>
-	  </div>
-
--->
+		 <div class='container'>
+			<div class='row align-items-center'>
+				<div class='col'><img class="img" src='./Pictures/FamSnuggles2.jpg' width='400'/></div>
+				<div class='col'><img class="img" src='./Pictures/FamSnuggles3.JPG' width='400'/></div>
+			</div>
+		 </div>
+		 <div class='container'>
+			<div class='row align-items-center'>
+				<div class='col'><img class="img" src='./Pictures/FamSnuggles4.jpg' width='400'/></div>
+				<div class='col'><img class="img" src='./Pictures/FamSnuggles5.jpg' width='400'/></div>
+			</div>
+		 </div>
+		 <div class='container'>
+		   <div class='row align-items-center'>
+					<div class='col'><img class="img" src='./Pictures/FamSnuggles6.jpg' width='400'></div>
+				   <div class='col'><img class="img" src='./Pictures/FamSnuggles7.jpg' width='400'/></div>
+		   </div>
+   
+		 </div><br/>
+		 <div class='container'>
+			<div class='row align-items-center'>
+				<div class='col'><img class="img" src='./Pictures/FamSnuggles9.jpg' width='400'/></div>
+				<div class='col'><img class="img" src='./Pictures/FamSnuggles8.jpg' width='400'/></div>
+			</div>
+		 </div>
 		
 		<!-- Footer -->
 		<footer>
 			<div class='container'>
 			<div class="row align-items-center">
-				<div class="col-4">
+				<div class="col">
 					<ul class="ul">
 						<li class="li"> Email: not.Real@gmail.com</li>
 					</ul>
 				</div>
-				<div class="col-8">
+				<div class="col">
 					<ul class="ul">
 						<li class="li"> Github: git@github.com:hutchingsForNow/Hutchingsjam.git</li>
 					</ul>
