--- a/Zoo.html
+++ b/Zoo.html
@@ -8,7 +8,7 @@
 		<title>Zoo</title>
 			<!-- Nav Bar -->
 		<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-			<a class="navbar-brand" href="index.html">Hutchingsjam</a>
+			<em><a class="navbar-brand" href="index.html">Hutchingsjam</a></em>
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
 			<span class="navbar-toggler-icon"></span>
 			</button>
