--- a/friends.html
+++ b/friends.html
@@ -7,7 +7,7 @@
 	<title>Bienvenido Mis Amigos!</title>
 	<!-- Nav Bar -->
 	<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-		<a class="navbar-brand" href="index.html">Hutchingsjam</a>
+		<em><a class="navbar-brand" href="index.html">Hutchingsjam</a></em>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
 		  <span class="navbar-toggler-icon"></span>
 		</button>
@@ -35,23 +35,31 @@
 	  </nav>
 </head>
 <body>
-		<h1>Bienvenido Mis Amigos!</h1>
-		<p>My friends are the best friends ever, which shouldn't be a suprise then I handpicked them. XD <br/>Pictues are soon to come.</p>
-
-	
-	<em><h2> Adventures With My Friends</h2></em> 
-	</p> Unlike with my family, I have not been to many places with my friends. We Have different
-<br/>kinds of adventures. For example, a group of friends and I stayed up for over 30 hours
-<br/>to have a <em><strong>Twilight Marathon</strong><em>. Below are some other "adventures" we have done.</p>
-	<ul>
-		<li>Ice Skating</li>
-		<li>Cooking new foods</li>
-		<li>Staying up 'til early morning watchings Miraculous Ladybug</li>
-		<li>Traveling to OK to visit Alyssa before she left on her mission</li>
-		<li>White Water Rafting</li>
-		<li>Promoting from PreSchool</li>
-	</ul>
-	
+	<h1>Bienvenido Mis Amigos!</h1>
+	<div class="container">
+		<div class="row align-items-center">
+			<div class="col">
+				<p>My friends are the best friends ever, which shouldn't be a suprise since I handpicked them. XD <br/>Pictures are soon to come.</p>
+			</div>
+		</div>
+		<em><h2> Adventures With My Friends</h2></em> 
+		<div class="row align-items-center">
+			<div class="col">
+				</p> Unlike with my family, I have not been to many places with my friends. We Have different
+					kinds of adventures. For example, a group of friends and I stayed up for over 30 hours
+					to have a <em><strong>Twilight Marathon</strong><em>. Below are some other "adventures" we have done.</p>
+			</div>
+		</div>
+		<ul>
+			<li>Ice Skating</li>
+			<li>Cooking new foods</li>
+			<li>Staying up 'til early morning watchings Miraculous Ladybug</li>
+			<li>Traveling to OK to visit Alyssa before she left on her mission</li>
+			<li>White Water Rafting</li>
+			<li>Promoting from PreSchool</li>
+		</ul>
+	</div>
+	<br/>
 	<!-- Footer -->
 	<footer>
 		<div class='container'>
