--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 	<!-- Nav Bar -->
 	<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-		<a class="navbar-brand" href="index.html">Hutchingsjam</a>
+		<em><a class="navbar-brand" href="index.html">Hutchingsjam</a></em>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
 		  <span class="navbar-toggler-icon"></span>
 		</button>
@@ -36,23 +36,35 @@
 		  </ul>
 		</div>
 	  </nav>
-
-	<!-- Menu Bar 
-	<ul class='ul'>
-		<li class='li'><a href='index.html'>Home</a></li>
-		<li class='li'><a href= 'homePage.html'>Family Page</a></li>
-		<li class='li'><a href= 'friends.html'>Friends Page</a></li>
-		<li class='li'><a href= '/lab-1-photography-website-hutchingsForNow/index.html'>Photography WebPage</a>
-		<li class='li'><a href= '/MrMusicShop/index.html'>Mr.Music Shop</a>
-	</ul><br/><br/>
--->
 </head>
 <body>
 	<h1>THE AMAZING WORLD OF A HUTCHINGS!</h1>
-	<p>Hello world! My name is Reagan Hutchings.</p>
-	<br/> <img src='./Pictures/HutchFamNice.jpg' width='300'/>    <img src='./Pictures/FriendsCollege0.jpg' width='300'/>  <br/>
-	<p> To check out my wonderful family, <em><a href='/homePage.html'>CLICK HERE!</a></em>         To see what my friends and I have been up to, <a href='/friends.html'>SMASH THIS LINK!</a></p>
 
+	<br/> 
+	<div class="container">
+	<div class="row align-items-center">
+		<div class="col">
+			<div class="polaroid">
+				<div class="contain">
+					<a href="homePage.html">
+						<img class="img" src='./Pictures/HutchFamNice.jpg' width='300' style="margin-top: 7px;"/>
+						<p>My family is filled with amazing people and it keeps getting bigger! Check out all the memories I have of them. You will see just how amazing they are.</p>
+					</a>
+				</div>
+			</div>
+		</div>
+		<div class="col">
+			<div class="polaroid">
+				<div class="contain">
+					<a href="friends.html">
+						<img class="img" src='./Pictures/FriendsCollege0.jpg' width='300' style="margin-top: 7px;"/>
+						<p>My friends are fantastic and pretty crazy sometimes. This picture really sums it up well.</p>
+					</a>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
 	  <!-- Footer -->
 	<footer>
 		<div class='container'>
